Added second link for recipe and built out the page for it

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <h1>Odin recipes</h1>
         <a href="./recipes/creamy_mac_and_cheese.html">Creamy mac and cheese</a>
+        <a href="./recipes/lazy_beef_chili.html">Lazy hazy beef chili</a>
     </body>
 
 </html>
