--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h1>Odin recipes</h1>
         <a href="./recipes/creamy_mac_and_cheese.html">Creamy mac and cheese</a>
         <a href="./recipes/lazy_beef_chili.html">Lazy hazy beef chili</a>
+        <a href="./recipes/cheesecake_pancakes.html">Cheesecake pancakes</a>
     </body>
 
 </html>
