Added css improvements for recipe site | Added better font, centered images and titles, centered links and wrapped links in divs

--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width:device-width initial-scale=1.0">
         <title>Odin recipes</title>
+        <link rel="stylesheet" href="./styles.css"/>
     </head>
     <body>
-        <h1>Odin recipes</h1>
-        <a href="./recipes/creamy_mac_and_cheese.html">Creamy mac and cheese</a>
-        <a href="./recipes/lazy_beef_chili.html">Lazy hazy beef chili</a>
-        <a href="./recipes/cheesecake_pancakes.html">Cheesecake pancakes</a>
+        <h1 class="title">Odin recipes</h1>
+        <div class="link_div">
+            <a href="./recipes/creamy_mac_and_cheese.html">Creamy mac and cheese</a>
+        </div>
+        <div class="link_div">
+            <a href="./recipes/lazy_beef_chili.html">Lazy hazy beef chili</a>
+        </div>
+        <div class="link_div">
+            <a href="./recipes/cheesecake_pancakes.html">Cheesecake pancakes</a>
+        </div>
     </body>
 
 </html>
