--- a/recipes/creamy_mac_and_cheese.html
+++ b/recipes/creamy_mac_and_cheese.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creamy Mac and Cheese</title>
+    <link rel="stylesheet" href="../styles.css"/>
 </head>
 <body>
-    <h1>Creamy mac and cheese</h1>
-    <img src="../images/macncheese.jpg" alt="Picture of mac and cheese" width="600" height="400">
+    <h1 class="title">Creamy mac and cheese</h1>
+    <img src="../images/macncheese.jpg"class="food_img" alt="Picture of mac and cheese" width="600" height="400">
     <h2>Amazing and quick creamy mac and cheese</h2>
     <p>This is our quick and easy homemade macaroni and cheese recipe. It’s made on the stovetop and does not require any baking. 
         That’s not to say that you could not bake it. We’ve shared how in the recipe below.</p> 
