--- a/recipes/lazy_beef_chili.html
+++ b/recipes/lazy_beef_chili.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lazy beef chili</title>
+    <link rel="stylesheet" href="../styles.css"/>
 </head>
 <body>
-    <h1>Lazy hazy beef chili</h1>
-    <img src="../images/chili.webp" alr="Image of chili" width="400" height="300">
+    <h1 class="title">Lazy hazy beef chili</h1>
+    <img src="../images/chili.webp" class="food_img" alr="Image of chili" width="400" height="300">
     <h2>Despite all the shortcuts, this lazy hazy beef chili is tremendously delicious.</h2>
     <p>For a little-to-no work beef chili, this lacks for nothing. Chunky salsa does all the chopping for you, 
         and the hazy IPA adds a subtle bitterness, a little acidity, and a certain something nobody will be able to pick out. 
