Added some colour better layour margins and paddint

--- a/recipes/creamy_mac_and_cheese.html
+++ b/recipes/creamy_mac_and_cheese.html
@@ -9,7 +9,7 @@
 <body>
     <h1 class="title">Creamy mac and cheese</h1>
     <img src="../images/macncheese.jpg"class="food_img" alt="Picture of mac and cheese" width="600" height="400">
-    <h2>Amazing and quick creamy mac and cheese</h2>
+    <h2 class="title2">Amazing and quick creamy mac and cheese</h2>
     <p>This is our quick and easy homemade macaroni and cheese recipe. It’s made on the stovetop and does not require any baking. 
         That’s not to say that you could not bake it. We’ve shared how in the recipe below.</p> 
     <p>Thanks to butter, flour, and mlik the sauce is like velvet and super creamy. To the sauce, we add a whole pound of cheddar cheese 
