--- a/recipes/cheesecake_pancakes.html
+++ b/recipes/cheesecake_pancakes.html
@@ -9,7 +9,7 @@
 <body>
     <h1 class="title">Cheesecake Pancakes</h1>
     <img src="../images/pancakes.webp" alt="Picture of pancakes" height="300" width="400" class="food_img">
-    <h2>Quick and easy delicious Cheesecake pancakes</h2>
+    <h2 class="title2">Quick and easy delicious Cheesecake pancakes</h2>
     <p>Cheesecake pancakes topped with strawberries definitely take your breakfast game up a few notches.</p>
     <p>hese cheesecake pancakes are “great for a special breakfast or brunch,” according to recipe developer and test kitchen expert Juliana Hale. </p>
 
